2004-02-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/music-functions.scm (determine-split-list): further analysis.

	* lily/script-engraver.cc (try_music): discard duplicate
	articulations.

	* input/regression/new-part-combine-solo.ly: new file

	* input/regression/new-part-combine-a2.ly: new file.

	* ly/performer-init.ly: add Devnull

	* scripts/convert-ly.py (FatalConversionError.sub_acc): add rule
	for \musicglyph #"accidental-*"
	(conv): \newpartcombine rule.

2004-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle @lilypondfile, bugfixes.

2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle verbatim, latex
	textwidth, --output.

2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/new-markup.scm (doubleflat): add accidental markups.

	* VERSION: release 2.1.17
	
	* Documentation/user/refman.itely (Automatic part combining):
	revise documentation of the part-combiner.

	* input/regression/pc-switch-slur.ly (texidoc): remove file.
	
	* input/test/part-combine-{moment,staff}.ly: remove file.

	* input/regression/pc-mmrest.ly (two): remove file.

	* scm/define-music-types.scm (music-descriptions): add
	Solo{One,Two}Event and UnisonoEvent

	* lily/new-part-combine-iterator.cc (unisono): add state_
	variable, signal changes with part-combine-event.

	* input/regression/new-part-combine-text.ly: new file.

	* lily/part-combine-engraver.cc: new file.

2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle snippet options.

2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/music-functions.scm (determine-split-list): detect solo1/2
	and unisono.

	* lily/new-lyric-combine-music-iterator.cc (construct_children):
	revert fix, document why.

	* lily/tie-performer.cc (process_music): new function. Set melisma
	property.

	* lily/tuplet-bracket.cc (make_bracket): make sure that gap is
	always smaller than bracket size.